--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "robofriends",
   "version": "0.1.0",
+  "homepage": "https://Hamidmirzapour.github.io/robofriends",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
